--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_secondary">SecondaryActivity</string>
+    <string name="title_activity_activity_a">activity_a</string>
+    <string name="title_activity_add_receta">AddRecetaActivity</string>
+    <string name="receta_name">Nombre de mi receta</string>
+
+    <string-array name="receta_cantidades">
+        <item>KG</item>
+        <item>G</item>
+
+    </string-array>
 </resources>
