Creando lista de ingredientes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,18 @@
         <item>l</item>
 
     </string-array>
+
+    <string-array name="receta_cantidades">
+        <item>1/4</item>
+        <item>1/3</item>
+        <item>1/2</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+
+    </string-array>
     <string name="title_activity_add_ingrediente">AddIngredienteActivity</string>
     <string name="tvIngredienteName">Nombre Ingrediente</string>
 </resources>
