Borrar receta implementado. En curso editar receta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="tvIngredienteName">¿Que ingredientes vas a usar?</string>
     <string name="tv_receta_dificultad">Nivel de dificultad</string>
     <string name="tvRecetaPreparacion">¿Como lo vas a hacer?</string>
+    <string name="title_activity_edit_receta">EditRecetaActivity</string>
 </resources>
