Creando Vista de visualización de receta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="tv_receta_dificultad">Nivel de dificultad</string>
     <string name="tvRecetaPreparacion">¿Como lo vas a hacer?</string>
     <string name="title_activity_edit_receta">EditRecetaActivity</string>
+    <string name="title_activity_view_receta">ViewRecetaActivity</string>
 </resources>
